--- a/school/index.html
+++ b/school/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="pt-br" class="scrollbar-thin scrollbar-track-zinc-800 scrollbar-thumb-zinc-500">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>School Hub</title>
   </head>
   <body>
     <div id="root"></div>
